--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cytoscape": "^3.33.1",
     "d3": "^7.9.0",
     "next": "15.4.6",
     "react": "19.1.0",
